PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Data_Structures_no_data.pf
module DataStructures{

    Person test(23, "test")

    Person{
        age Int
        name String
    }

    mainFun(){
        print(test.age)

        (age:Int, name:String) PersAlt(18, "alternate")
        print(persAlt.name)
        return 0
    }
}